--- a/Backend/Apollo/package.json
+++ b/Backend/Apollo/package.json
@@ -2,7 +2,7 @@
   "name": "Apollo",
   "version": "1.0.0",
   "description": "Fetching data from API",
-  "main": "index.js",
+  "main": "src/index.js",
   "author": "Kaushik Jonnavithula",
   "license": "MIT",
   "dependencies": {
