--- a/Backend/Apollo/package.json
+++ b/Backend/Apollo/package.json
@@ -5,8 +5,15 @@
   "main": "src/index.js",
   "author": "Kaushik Jonnavithula",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
   "dependencies": {
+    "apollo-datasource-rest": "^0.3.2",
     "apollo-server": "^2.4.8",
     "graphql": "^14.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
