add react native, react-paper-native, start front page

--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -17,7 +17,10 @@
     "node-fetch": "^2.3.0",
     "react": "16.5.0",
     "react-apollo": "^2.5.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-paper": "^2.15.0",
+    "react-native-vector-icons": "^6.4.2",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
