--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -20,6 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-paper": "^2.15.0",
     "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.6.1",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
