--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -18,6 +18,7 @@
     "react": "16.5.0",
     "react-apollo": "^2.5.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-camera": "^2.2.1",
     "react-native-paper": "^2.15.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
