--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -21,6 +21,7 @@
     "react-native-camera": "^2.2.1",
     "react-native-paper": "^2.15.0",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-video": "^4.4.1",
     "react-navigation": "^3.6.1",
     "styled-components": "^4.2.0"
   },
