--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -23,6 +23,7 @@
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.1",
     "react-navigation": "^3.6.1",
+    "react-navigation-material-bottom-tabs": "^1.0.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
