--- a/Frontend/recipEZ/package.json
+++ b/Frontend/recipEZ/package.json
@@ -12,6 +12,7 @@
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-link-http": "^1.5.14",
     "expo": "^32.0.0",
+    "firebase": "^5.9.3",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "node-fetch": "^2.3.0",
@@ -24,7 +25,8 @@
     "react-native-video": "^4.4.1",
     "react-navigation": "^3.6.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
